Primeiras impressões com integração VS Community e Azure DevOps + Inserção de classes nos projetos

--- a/CodeTur/CodeTur.Testes/CodeTur.Testes.csproj
+++ b/CodeTur/CodeTur.Testes/CodeTur.Testes.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeTur.Comum\CodeTur.Comum.csproj" />
+    <ProjectReference Include="..\CodeTur.Dominio\CodeTur.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
