--- a/CodeTur/CodeTur.Dominio/CodeTur.Dominio.csproj
+++ b/CodeTur/CodeTur.Dominio/CodeTur.Dominio.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="1.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeTur.Comum\CodeTur.Comum.csproj" />
+  </ItemGroup>
+
 </Project>
