--- a/CodeTur/CodeTur.Api/Properties/launchSettings.json
+++ b/CodeTur/CodeTur.Api/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://192.168.5.64:5001;http://192.168.5.64:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
